--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -330,7 +330,7 @@ van-dialog {
         text-align: center;
       }
     }
-    .TimeAndType {
+    .focus-val {
       width: 361rpx;
       height: 54rpx;
       flex-direction: row;
