--- a/pages/square/square.wxml
+++ b/pages/square/square.wxml
@@ -1,5 +1,5 @@
 <!--square.wxml-->
-<view class="background" style="background: {{room.backgroundStyle}}"/>
+<view class="background" style="background: {{room.backgroundStyle}}" />
 <view class="container">
   <view class="container-top">
     <avatar-display avatar="{{player.avatarUrl}}" name="{{player.name}}" />
@@ -12,11 +12,11 @@
   <scroll-view class="room-list" scroll-y="true">
     <view class="room-list-content">
       <view class="room" wx:for="{{roomList}}" bindtap="toVisit">
-        <image src="{{item.thumbnail}}" mode="widthFix" class="room-thumbnail"/>
+        <image src="{{item.thumbnail?item.thumbnail:'../../assets/common/3.png'}}" mode="widthFix" class="room-thumbnail" />
         <view class="room-desc">
-          <text class="room-user-name">{{item.nickName}}'s</text>
+          <text class="room-user-name">{{item.playerName}}'s</text>
           <view class="room-level-name">
-            <text class="room-level">{{item.level}}</text>
+            <text class="room-level">{{item.playerLevel}}</text>
             <text class="room-name">{{item.name}}</text>
           </view>
         </view>
