--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -115,6 +115,12 @@
   }
 }
 
+.cancel-button {
+  position: fixed;
+  left: 32rpx; top: 96rpx;
+  width: fit-content; height: 42rpx;
+}
+
 van-dialog {
   display: flex;
   align-items: center;
