--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -70,6 +70,9 @@
   </view>
 </view>
 
+<view wx:if="{{runtimeFocus}}" class="cancel-button"
+      bind:tap="onCancelTap">取消专注</view>
+
 <van-dialog use-slot show="{{ isShowStartWindow }}"
             show-confirm-button="{{false}}"
             bind:close="onClickHide"
@@ -102,8 +105,8 @@
       <view class="mode {{focus.mode == 1 ? 'selected' : ''}}"
             bind:tap="onModeTab" data-index="{{1}}">反盖模式</view>
     </view>
-    <view class="text">完成后经验+{{focus.expectExpReward}} 金币+{{focus.expectGoldReward}}</view>
-    <view class="text">超时后可以继续获得奖励哦～</view>
+    <view class="text">预计经验+{{focus.expectExpReward}} 金币+{{focus.expectGoldReward}}</view>
+<!--    <view class="text">超时后可以继续获得奖励哦～</view>-->
     <view class="start-btn" bind:tap="onSubmit">开始专注</view>
   </view>
 </van-dialog>
@@ -151,6 +154,7 @@
     <textarea class="focus-content" lines="1"
               placeholder="专注内容备注…"
               placeholder-style="font-size: 24rpx"
+              value="{{focus.note}}"
               bind:input="onNoteInput"/>
     <view class="result-config-top">
       <view class="gold-reward">
