--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -1,5 +1,6 @@
 <view class="page">
   <gold-level-display gold="50000" level="99" expRate="0.2333"/>
+  <image src="../../assets/shop/back.png" style="height: 5vw;width: 4vw;position: absolute;left: 4vw;top: 6.9vh;" bindtap="tapToReturn"></image>
   <image class="room" src="../../images/room1.jpg"></image>
   <view class="column">
     <view class="return">
