--- a/app.less
+++ b/app.less
@@ -11,3 +11,10 @@
   width: 100vw;
   height: calc(100vh - 160rpx);
 }
+
+#main-canvas {
+  position: absolute;
+  left: 0; top: 0;
+  width: 100vw; height: 100vh;
+  z-index: -100;
+}
