--- a/pages/shop/shop.less
+++ b/pages/shop/shop.less
@@ -6,6 +6,12 @@
   display: flex;
   flex-direction: column;
   background: -webkit-linear-gradient(top, #C7E1FA, #4F8DCC);
+
+  .back-button {
+    position: fixed;
+    left: 32rpx; top: 108rpx;
+    width: fit-content; height: 42rpx;
+  }
   .room{
     padding-left: 8vw;
     margin-top: 5vh;
